# GearGuardian

./: CMakeLists.txt  README.md  prj.conf  progress_log.txt
app/include/: app_config.h  app_events.h  app_faults.h  app_modes.h  app_state.h  boot_metadata.h
app/src/: alarm_service.c  alarm_service.h  boot_metadata.c  diag_mode.c  diag_mode.h  event_dispatcher.c  fault_manager.c  fault_manager.h  logger_service.c  logger_service.h  main.c  mode_manager.c  mode_manager.h  motion_classifier.c  motion_classifier.h  normal_mode.c  normal_mode.h  safe_mode.c  safe_mode.h  sensor_thread.c  sensor_thread.h  startup.c  startup.h  state_machine.c  state_machine.h  ui_service.c  ui_service.h
boards/: esp32s3_devkitc.overlay
docs/: architecture.md  boot-flow.md  bringup-plan.md  state-machine.md  wiring-plan.md
drivers/buzzer/: buzzer.c  buzzer.h
drivers/icm20948/: icm20948.c  icm20948.h  icm20948_regs.h
drivers/oled/: oled.c  oled.h  oled_font5x7.h
drivers/reed_switch/: reed_switch.c  reed_switch.h
drivers/sdlog/: sdlog.c  sdlog.h
tests/host/: .gitkeep
tests/on_target/: .gitkeep
